<resources>
    <string name="app_name">Super Banco Imobiliario</string>
    <string name="milhares">M</string>
    <string name="valoresAteRS999">K</string>
    <string name="prolabore">$$</string>
    <string name="noticias">?</string>
    <string name="numero_7">7</string>
    <string name="numero_8">8</string>
    <string name="numero_9">9</string>
    <string name="numero_4">4</string>
    <string name="numero_5">5</string>
    <string name="numero_6">6</string>
    <string name="numero_1">1</string>
    <string name="numero_2">2</string>
    <string name="numero_3">3</string>
    <string name="cancelarOperacao">C</string>
    <string name="numero_0">0</string>
    <string name="ponto">.</string>
    <string name="buttonpositive">+</string>
    <string name="buttonnegative">-</string>
    <string name="reset">°</string>
</resources>