<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main_activity"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="15dp"
        android:textAlignment="viewEnd"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@color/background_textview" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/milhares"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/background_button_M" />

        <Button
            android:id="@+id/buttonnotice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noticias"
            android:layout_marginEnd="3dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/background_button_mid" />

        <Button
            android:id="@+id/buttonprolabore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prolabore"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/background_button_mid" />

        <Button
            android:id="@+id/buttonK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/valoresAteRS999"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/background_button_K" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="3dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonreset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:backgroundTint="@color/background_main_activity"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/number7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/numero_7"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/background_button_default" />

        <Button
            android:id="@+id/number8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/numero_8"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/background_button_default" />

        <Button
            android:id="@+id/number9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/numero_9"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/background_button_default" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/number4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/numero_4"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/background_button_default" />

        <Button
            android:id="@+id/number5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/numero_5"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/background_button_default" />

        <Button
            android:id="@+id/number6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/numero_6"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/background_button_default" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/number1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/numero_1"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/background_button_default" />

        <Button
            android:id="@+id/number2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/numero_2"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/background_button_default" />

        <Button
            android:id="@+id/number3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/numero_3"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/background_button_default" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/cancelarOperacao"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/background_button_C" />

        <Button
            android:id="@+id/number0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/numero_0"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/background_button_default" />

        <Button
            android:id="@+id/buttonpoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/ponto"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/background_button_default" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonpositive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:text="@string/buttonpositive"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/background_main_activity"/>

        <Button
            android:id="@+id/buttonnegative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonnegative"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/background_main_activity"/>
    </LinearLayout>
</LinearLayout>